--- a/PWBD.html
+++ b/PWBD.html
@@ -197,10 +197,7 @@
                    <div class="portfolio-links">
 					<a href="assets/img/step1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Virtual Exihbition reference institution"><i class="bx bx-plus"></i></a>
 					</div>
-		<p>In this section we found really useful the use of ideation cards, this tool helped us with the delineation of the project taking into account more other aspects. First, the goal that at the end of the project we would the visitor to reach; in this case, we didn’t think this project as primary dedicated to the culture expansion, it has not didactical goals, but it is possible to reach them. Anyway, the most important aim that this project want to reach is the increasing of the outreach; how? First, by creating a safe space of sharing where to find empathy and build a social network, and second, in a more pragmatic way, by providing useful tools to share a personal experience.
-The motivations are at the base of the goals, inclusion and personal relevance are those feelings that the user must feel at the end of its experience.
-The star asset is, obviously, the digital resource, since the initiative is present exclusively on the web; at the same time, the user doesn’t need a particular knowledge of the digital tools, it is sufficient to have a minimal knowledge of how to use a computer in its most simple functionalities.
-It can be a barrier too, if the user doesn’t have one of the devices needed to visualise the experience or an even minimal knowledge of the technology.</p>
+		
                 </div>
             </div>				
 	
@@ -405,7 +402,10 @@ It can be a barrier too, if the user doesn’t have one of the devices needed to
 	<a href="assets/img/step3.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Virtual Exihbition reference institution - STAGE 3 – Create design brief"><i class="bx bx-plus"></i></a>
 	</div>
 </p>
-  </div>
+<p>In this section we found really useful the use of ideation cards, this tool helped us with the delineation of the project taking into account more other aspects. First, the goal that at the end of the project we would the visitor to reach; in this case, we didn’t think this project as primary dedicated to the culture expansion, it has not didactical goals, but it is possible to reach them. Anyway, the most important aim that this project want to reach is the increasing of the outreach; how? First, by creating a safe space of sharing where to find empathy and build a social network, and second, in a more pragmatic way, by providing useful tools to share a personal experience.
+The motivations are at the base of the goals, inclusion and personal relevance are those feelings that the user must feel at the end of its experience.
+The star asset is, obviously, the digital resource, since the initiative is present exclusively on the web; at the same time, the user doesn’t need a particular knowledge of the digital tools, it is sufficient to have a minimal knowledge of how to use a computer in its most simple functionalities.
+It can be a barrier too, if the user doesn’t have one of the devices needed to visualise the experience or an even minimal knowledge of the technology.</p>  </div>
   </div>
 
         </div>
