--- a/PWDBnew.html
+++ b/PWDBnew.html
@@ -61,59 +61,11 @@
   <header id="header" class="fixed-top header-inner-pages">
     <div class="container d-flex align-items-center justify-content-lg-between">
       <h1 class="logo me-auto me-lg-0"><a href="index.html">WANTED<span>!</span></a></h1>
-      <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
           <li><a class="nav-link scrollto active" href="index.html#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="index.html#about">About</a></li>
-          <li class="dropdown"><a href=""><span>Project Work Design Brief</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li class="dropdown"><a href="#Intro"><span>Introduction</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li class="dropdown"><a href="#Context">The Context</a>
-                    <ul>
-                      <li><a href="#RI">Reference institution and assets</a></li>
-                      <!--li><a href="#">b) relevant CH assets</a></li-->
-                      <li><a href="#Location">The location</a></li>
-                      <li><a href="#Audience">The target audience</a></li>
-                    </ul>
-                  </li>
-                  <li class="dropdown"><a href="#Concept">The Concept</a>
-                    <ul>
-                      <li><a href="#conceptual">Conceptual map</a></li>
-                      <li><a href="#Museological">The museological approach</a></li>
-                      <li><a href="#">Experience design</a></li>
-                      <li><a href="#">Specific CH topic selected as case study</a></li>
-                      <li><a href="#">Chosen cognitive focus</a></li>
-                    </ul>
-                  </li>
-                  <li><a href="#Goals">The Goals</a></li>
-                  <li><a href="#Requirements">The Requirements</a></li>               
-                </ul>
-              </li>
-              <li class="dropdown"><a href="#Dev"><span>Development</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">The story</a></li>
-                  <li><a href="#ID">Interaction Diagram</a></li>
-                  <li><a href="#">c) Development to reach the cognitive focus</a></li>
-                  <li><a href="#">d) Foreseen workflow (includes needed software, hardware, professionals)</a></li>
-                  <li><a href="#">e) Further development and maintenance issues</a></li>
-                </ul>
-              </li>
-              <li><a href="#team">Teams roles</a></li>
-              <li><a href="#Bib">Bibliography</a></li>
-              <li class="dropdown"><a href="#Complementary"><span>Complementary Material for the Discussion</span> <i class="bi bi-chevron-right"></i></a>
-                <!--ul>
-                  <li><a href="#">3d object or scene (3D)</a></li>
-                  <li><a href="#"> Trailer (video)</a></li>
-                  <li><a href="#"> Audio (i.e. interviews of your potential users)</a></li>
-                </ul-->
-              </li>
-            </ul>
-          </li>
-          <!--li><a class="nav-link scrollto" href="stories.html">Services</a></li>
-          <li><a class="nav-link scrollto " href="index.html#portfolio">Portfolio</a></li-->
+          <li><a class="nav-link scrollto" href="PWDB.html">Project Work Design Brief</a></li>
           <li><a class="nav-link scrollto" href="#team">Team</a></li>
           <li><a class="nav-link scrollto" href="index.html#contact">Contact</a></li>
         </ul>
@@ -204,7 +156,7 @@
 <div class="container col-lg-3 col-md-6">
 
 <nav id="exhibit-pages" class="side">
-    <ul><li class="current"><a href="PWDBnew.html">Intro</a>
+    <ul><li class="current"><a href="PWDBnew.html">Introduction</a>
 		<ul><li><a href="#" onclick="change_page('1_1_1.html')">The context</a>
 			<ul><li><a href="#" onclick="change_page('1_1_1.html')">Reference institutions</a></li>
 			<li><a href="#" onclick="change_page('1_1_2.html')">Relevant assets</a></li>
