--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
-          <li><a class="nav-link scrollto" href="PWBD.html">Project Work Design Brief</a></li>
-          <li><a class="nav-link scrollto" href="PWBD.html#team">Team</a></li>
+	<li><a class="nav-link scrollto" href="PWBD.html">Project Work Design Brief</a></li>
+          <li><a class="nav-link scrollto" href="PWBD_paginone.html">Project Work Design Brief OLD</a></li>
+          <li><a class="nav-link scrollto" href="3.html">Team</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -83,15 +84,7 @@
 			<img src="assets/img/working.png" width="70%">
                </div>
         </div>
-
-	  
-		<div class="col-xl-2 col-md-4">
-          <div class="icon-box">
-		  <h3><a href="in_art.html" onclick="window.open(this.href, 'mywin', 'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;">In Art - The exhibit</a></h3>		           
-		   <img src="assets/img/fioroni.png" width="70%">
-          </div>
-        </div>
-	
+	      
 		<div class="col-xl-2 col-md-4">
           <div class="icon-box">
 			<h3><a href="ChooseGuide.html" onclick="window.open(this.href, 'mywin', 'left=40,top=40,width=500,height=500,toolbar=1,resizable=0'); return false;">Choose your guide!</a></h3>
@@ -99,6 +92,13 @@
             <h3><a href="https://sketchfab.com/3d-models/fridas-room-e5f124def4dc40dcaf96f73a2363854c?utm_medium=embed&utm_campaign=share-popup&utm_content=e5f124def4dc40dcaf96f73a2363854c" onclick="window.open(this.href, 'mywin', 'left=60,top=60,width=500,height=500,toolbar=1,resizable=0'); return false;" target="_blank">3d Frida's room</a></h3>
           </div>
         </div>	
+	      
+	      <div class="col-xl-2 col-md-4">
+          <div class="icon-box">
+		  <h3><a href="in_art.html" onclick="window.open(this.href, 'mywin', 'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;">In Art - The exhibit</a></h3>		           
+		   <img src="assets/img/fioroni.png" width="70%">
+          </div>
+        </div>
 		
         <div class="col-xl-2 col-md-4">
        	   <div class="icon-box">
