--- a/1_1_2.html
+++ b/1_1_2.html
@@ -5,14 +5,40 @@
 	</head>
 	<body>
 		<!-- ======= Intro>Context>ReferenceInstitution end / Intro>Context>Assets start ======= -->
-        <h3>The Context</h3>
+        <h2>Introduction</h2>
+		<h3>The Context</h3>
 		<div class="container" id="Assets">
 			<h5>Relevant assets</h5>       
 			<p>We arrived to define that the most suitable context for our purposes was the Virtual Exhibition thanks to a recursive design process we did using the <strong><a href="https://gifting.digital/visitorbox-design-cards/" target="_blank">VisitorBox Ideation Cards</a></strong>.<br>
 			In fact, the cards have been a useful tool to explore the relevant assets and the hypothetical proper target audience for two initial contexts we analysed: a physical museum and the virtual exhibition.<br>
 			As a reference institution for a physical museum, we took the <a href="https://www.kattenkabinet.nl/" target="_blank">KattenKabinet (Cat Cabinet)</a> in Amsterdam; we used it until the <strong>STAGE 3– Create design brief</strong> to finally decide to design the digital visitor experiences for the Virtual Exhibition.</p>
 	
-            <div class="two-grid">
+	  <div class="container">
+  <h6>STAGE 1 – Define context</h6>
+
+  <div class="two-grid">
+  <div class="left"><h6>Physical reference institution</h6>
+    <p><a href="assets/img/step1_1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Physical reference institution - STAGE 1 – Create design brief"><img src="assets/img/step1_1.png" style="border-radius: 0;"></a>
+	<!--div class="portfolio-links">
+			<a href="assets/img/step1_1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Physical reference institution - STAGE 1 – Create design brief"><i class="bx bx-plus"></i></a>
+			</div-->
+	</p>
+  </div>
+  <div class="right"><h6>Virtual Exihbition</h6>
+  <p><img src="assets/img/step1.png" style="border-radius: 0;">
+	<div class="portfolio-links">
+	<a href="assets/img/step1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Virtual Exihbition reference institution - STAGE 1 – Create design brief"><i class="bx bx-plus"></i></a>
+	</div>
+</p>
+  </div>
+  </div>
+
+        </div>
+		
+		
+	
+	
+            <!--div class="two-grid">
                 <div class="left">
                   <h6 style="center"><b>Physical reference institution</b></h6>
                   <p>
@@ -30,7 +56,7 @@
 					<a href="assets/img/step1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Virtual Exihbition reference institution"><i class="bx bx-plus"></i></a>
 					</div>
                 </div>
-            </div>				
+            </div-->				
 	
 		<p>The two institutions, as shown in the table below, have in common only the <strong>exibhits</strong> asset and they are substantially different:</p>
 		
@@ -42,7 +68,7 @@
         <tr><td>exibhits*</td><td>exibhits*</td></tr>
         </table>
         	  
-            </div>
+            </div><br>
 
 	</body>
 </html>
