--- a/1_1_3.html
+++ b/1_1_3.html
@@ -5,11 +5,12 @@
 	</head>
 	<body>      
 		<!-- ======= Intro>Context>Audience ======= -->
+<h2>Introduction</h2>
 <h3>The Context</h3>
 
 
             <div class="container row" id="Audience">
-          <h5>The target audience with characteristics, motivations, capabilities and devices)Personae e altro</h5>
+          <h5>The target audience with characteristics, motivations, capabilities and devices</h5>
 		  
 		  		<p>
 				From the same previous step of the Ideation Cards, we could outline that the two institutions had more point of contacts in the target audience than in the assets: in fact, they share the two categories of <strong>art and animal passionate</strong> as well as the part of <strong>users enjoying collections online</strong>. <br>
