--- a/1_3.html
+++ b/1_3.html
@@ -6,15 +6,13 @@
 	<body>      
 		<!-- ======= Intro>Context>Audience ======= -->
 		
-<h2>Intro</h2>
+<h2>Introduction</h2>
 
-<h3>The Context</h3>
+<h3>The Goals (cultural, cognitive, economic, educational etc.)</h3>
 
             <!-- ======= Intro>Concept end/Intro>Goals start ======= -->
 <div class="container" id="Goals">       
 
-<h4> Goal (cultural, cognitive, economic, educational etc.)
-</h4>
       <p>
       As we have seen in the development of the institutional goals, the virtual exhibition and the related applications cover several goals in different areas.<br>
 In particular, these are the three main goals the interactive application wants to achieve:</p>
