--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
-	<li><a class="nav-link scrollto" href="PWBD.html">Project Work Design Brief</a></li>
+	<li><a class="nav-link scrollto" href="PWDB.html">Project Work Design Brief</a></li>
           <li><a class="nav-link scrollto" href="PWBD_paginone.html">Project Work Design Brief OLD</a></li>
           <li><a class="nav-link scrollto" href="3.html">Team</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
