--- a/PWDB.html
+++ b/PWDB.html
@@ -169,7 +169,8 @@
 			<ul><li><a href="#" onclick="change_page('1_2_1.html')">CH topic case study</a></li>
 			<li><a href="#" onclick="change_page('1_2_2.html')">Chosen cognitive focus</a></li>
 			<li><a href="#" onclick="change_page('1_2_3.html')">Ideation Cards</a></li>
-			<li><a href="#" onclick="change_page('1_2_4.html')">The museological approach</a></li>
+			<li><a href="#" onclick="change_page('1_2_4.html')">Ideation Cards</a></li>
+			<li><a href="#" onclick="change_page('1_2_5.html')">The museological approach</a></li>
 			</ul>
 			</li>
 			
