--- a/1_1_2.html
+++ b/1_1_2.html
@@ -25,10 +25,10 @@
 	</p>
   </div>
   <div class="right"><h6>Virtual Exihbition</h6>
-  <p><img src="assets/img/step1.png" style="border-radius: 0;">
-	<div class="portfolio-links">
+  <p><a href="assets/img/step1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Virtual Exihbition - STAGE 1 – Create design brief"><img src="assets/img/step1.png" style="border-radius: 0;">
+	<!--div class="portfolio-links">
 	<a href="assets/img/step1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Virtual Exihbition reference institution - STAGE 1 – Create design brief"><i class="bx bx-plus"></i></a>
-	</div>
+	</div-->
 </p>
   </div>
   </div>
@@ -58,14 +58,14 @@
                 </div>
             </div-->				
 	
-		<p>The two institutions, as shown in the table below, have in common only the <strong>exibhits</strong> asset and they are substantially different:</p>
+		<p>The two institutions, as shown in the table below, have in common only the <strong>exhibits</strong> asset and they are substantially different:</p>
 		
 		<table>
         <tr><th>Physical Museum</th><th>Virtual Exhibition</th></tr>
 		<tr><td>Retail</td><td>Guides</strong></td></tr>
 		<tr><td>location</td><td>digital resource</td></tr>
 		<tr><td>fame</td><td>outreacht activities</td></tr>
-        <tr><td>exibhits*</td><td>exibhits*</td></tr>
+        <tr><td>exhibits*</td><td>exhibits*</td></tr>
         </table>
         	  
             </div><br>
