--- a/1_1_3.html
+++ b/1_1_3.html
@@ -15,7 +15,7 @@
 		  		<p>
 				From the same previous step of the Ideation Cards, we could outline that the two institutions had more point of contacts in the target audience than in the assets: in fact, they share the two categories of <strong>art and animal passionate</strong> as well as the part of <strong>users enjoying collections online</strong>. <br>
 				All these audiences are <strong>quite familiar with technological devices</strong> that they are used to use for several daily tasks (find an address, search for a professional, sending and receiving email and instant messaging, etc.)<br>
-				On these bases, we created the Personas - as defined by the Alan Cooper method  - available in the Development section.
+				On these bases, we created the <a href="2_1.html" target="_blank">Personas</a> - as defined by the Alan Cooper method - available in the Development section.
 				</p>		
 
 		<table>
