--- a/2_2.html
+++ b/2_2.html
@@ -11,27 +11,20 @@
 <h3>Interaction "project - users" Diagram</h3>
 
             <!-- ======= Intro>Concept end/Intro>Goals start ======= -->
-            <div class="container" id="ID"> 
+<div class="container" id="ID"> 
+<h4>Choose your guide application</h4>
 
   <div class="row">
     <div class="col-lg-6 col-md-6 d-flex align-items-stretch">
-      <h5><b>Choose your guide</b></h5></br>
-        </div>
-    <div class="col-lg-6 col-md-6 d-flex align-items-stretch">
-      <h5></h5></br>
-     </div>      
-  </div>
-
-  <div class="row">
-    <div class="col-lg-12 col-md-12 d-flex align-items-stretch">
      <img src="assets/img/interaction/ChooseGuide.JPG" title="Choose your guide interaction schema" align="middle">
     </div>      
-    <div class="col-lg-12 col-md-12 d-flex align-items-stretch iframe">
+    <div class="col-lg-6 col-md-6 d-flex align-items-stretch">
      <iframe ondblclick="requestFullscreen()" src="ChooseGuide.html" title="Choose your guide application" width=100%" allow="fullscreen"></iframe>
     </div>
   </div>
 
-  </div>																	 
+  </div>		
+<br>  
 <!-- ======= Development> TheStory END======= -->
 		
 	</body>
