--- a/PWDB.html
+++ b/PWDB.html
@@ -73,6 +73,10 @@
       </nav><!-- .navbar -->
 
       <a href="in_art.html" class="get-started-btn scrollto">The exhibit</a>
+	<a href="ChooseGuide.html" class="get-started-btn scrollto" 
+         onclick="window.open(this.href, 'mywin', 'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;">Choose your guide!</a>
+      <a href="index.html#cta" class="get-started-btn scrollto" 
+         onclick="window.open(this.href, 'mywin', 'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;">Share your story!</a>
 
     </div>
   </header><!-- End Header -->
@@ -169,7 +173,7 @@
 			<ul><li><a href="#" onclick="change_page('1_2_1.html')">CH topic case study</a></li>
 			<li><a href="#" onclick="change_page('1_2_2.html')">Chosen cognitive focus</a></li>
 			<li><a href="#" onclick="change_page('1_2_3.html')">Ideation Cards</a></li>
-			<li><a href="#" onclick="change_page('1_2_4.html')">Ideation Cards</a></li>
+			<li><a href="#" onclick="change_page('1_2_4.html')">Conceptual maps</a></li>
 			<li><a href="#" onclick="change_page('1_2_5.html')">The museological approach</a></li>
 			</ul>
 			</li>
@@ -180,7 +184,7 @@
 		
 		<li><a href="#" onclick="change_page('2_0.html')">Development</a>
 		<ul><li><a href="#" onclick="change_page('2_1.html')">The story - Personas - Scenario</a></li>
-		<li><a href="#" onclick="change_page('2_2.html')">Interaction project - users Diagram</a></li>
+		<li><a href="#" onclick="change_page('2_2.html')">Interaction "project - users" Diagram</a></li>
 		<li><a href="#" onclick="change_page('2_3.html')">User Experience Design Diagram</a></li>
 		<li><a href="#" onclick="change_page('2_4.html')">Requirements and workflow</a></li>
 		<li><a href="#" onclick="change_page('2_5.html')">Further development and maintenance</a></li>
@@ -283,10 +287,11 @@ jQuery(document).ready(function () {
       </div>
     </div>
 
-    <div class="container">
+        <div class="container">
       <div>
-        <p><strong>Wanted!</strong> is a project developed for the final exam of <emph>Digital Heritage and Multimedia</emph> course within the <a href="https://corsi.unibo.it/2cycle/DigitalHumanitiesKnowledge">DHDK Master's Degree</a>, Alma Mater Studiorum - Università di Bologna, a.y. 2020/2021. Texts and contents organization are released with a <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0 license</a>.</p>
-        <!--p><strong>Images comes .......</p-->
+        <p><strong>Wanted!</strong> is a project developed for the final exam of <em>Digital Heritage and Multimedia</em> course within the <a href="https://corsi.unibo.it/2cycle/DigitalHumanitiesKnowledge">DHDK Master's Degree</a>, Alma Mater Studiorum - Università di Bologna, a.y. 2020/2021. Texts and contents organization are released with a <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0 license</a>.</p>
+        <p><strong>Images could be copyrighted. They are reported in this website only with illustrative purposes in an eductional and research framework.<br>
+		Please, refer to the source institution where reported.</strong></p>
       </div>
       <div class="copyright">Website template &copy; Copyright <strong><span>Gp</span></strong>. All Rights Reserved</div>
       <div class="credits">
