--- a/1_1_2.html
+++ b/1_1_2.html
@@ -25,7 +25,7 @@
 	</p>
   </div>
   <div class="right"><h6>Virtual Exihbition</h6>
-  <p><a href="assets/img/step1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Virtual Exihbition - STAGE 1 – Create design brief"><img src="assets/img/step1.png" style="border-radius: 0;">
+  <p><a href="assets/img/step1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Virtual Exihbition - STAGE 1 – Create design brief"><img src="assets/img/step1.png" style="border-radius: 0;"></a>
 	<!--div class="portfolio-links">
 	<a href="assets/img/step1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Virtual Exihbition reference institution - STAGE 1 – Create design brief"><i class="bx bx-plus"></i></a>
 	</div-->
