--- a/in_art.html
+++ b/in_art.html
@@ -50,7 +50,7 @@
         <ul>
           <li><a class="nav-link scrollto active" href="index.html#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="index.html#about">About</a></li>
-          <li><a class="nav-link scrollto" href="PWBDB.html">Project Work Design Brief</a></li>
+          <li><a class="nav-link scrollto" href="PWDB.html">Project Work Design Brief</a></li>
           <li><a class="nav-link scrollto" href="3.html">Team</a></li>
           <li><a class="nav-link scrollto" href="index.html#contact">Contact</a></li>
         </ul>
