--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
         </div>
 		
         <div class="col-xl-2 col-md-4">
-       	   <div class="icon-box">
+       	   <a href="#your_stories"><div class="icon-box">
+		   <h3>Your Stories</h3>
 			<img src="assets/img/dogo.png" width="70%">
-			<h3><a href="#your_stories">Your Stories</a></h3>
-           </div>
+           </div></a>
         </div>
         
         <div class="col-xl-2 col-md-4">
