--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
 
         </div>
 		<div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
-		<p>A more detailed analysis is available in <a href="PWBD.html#CHtopic" onClick="#collapseIntro">The Concept</a> section.
+		<p>A more detailed analysis is available in <a href="1_2_1.html">The Concept</a> section.
 		</div>
        
 
