--- a/2_5.html
+++ b/2_5.html
@@ -12,21 +12,20 @@
 
             <!-- ======= Intro>Concept end/Intro>Goals start ======= -->
           <div class="container" id="maintenance">  
-	<p>Further developments of the project include the forthcoming release of new tools and merchandising conceived to improve the users interaction and engagement as well as to assure the project sustainability. To achieve these goals, the creation of a network of partnerships and/or sponsorships with economic and cultural related realities	will be welcomed. These relationship will also increase the project visibility and the possibility to have social media adv revenues - an example have been shown in the Sofia scenario.</br>
-	Some of our proposal are illustrated in the Forthcoming section and briefly listed below:</p>
+	<p>Further developments of the project include the forthcoming <strong>release of new tools and merchandising</strong> conceived to improve the users interaction and engagement as well as to assure the project sustainability.<br>
+	To achieve these goals, the creation of a network of <strong>partnerships and/or sponsorships</strong> with economic and cultural related realities	will be welcomed. These relationship will also increase the project <strong>visibility</strong> and the possibility to have <strong>social media adertising revenues</strong> - an example have been shown in the <a href="2_1.html" target="_blank">Sofia scenario</a>.</br>
+	Some of our proposal are illustrated in the <a href="index.html#further_dev" target="_blank">Forthcoming section</a> and briefly listed below:</p>
 
 	<div class="row">
 		 
 <div class="col-lg-8 col-md-8 d-flex align-items-stretch">
 	<div>
 	<h3>Search for your pet application</h3>
-	<p><a href="index.html#" target="_blank"><strong>Search for your pet</strong></a> is a tool able to help people who lost their pets by loading, sharing, and visualizing <strong>geolocated data</strong> of their missing pets. The user will have the possibility to fill in a form that will structure data similarly to those seen in the Preliminary data section; other users could improve information in case they have seen the lost-pet.</p>
-	</div>
-	<div>    
+	<p><a href="index.html#3cta" target="_blank"><strong>Search for your pet</strong></a> is a tool able to help people who lost their pets by loading, sharing, and visualizing <strong>geolocated data</strong> of their missing pets. The user will have the possibility to fill in a form that will structure data similarly to those seen in the Preliminary data section; other users could improve information in case they have seen the lost-pet.</p>  
 	<img src="assets/img/further_dev/Search_for.png" title="Search for your pet application">
 		<p>
 		<div class="portfolio-links">
-			<a href="assets/img/further_dev/Search_for.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Search for your pet application - preview"><i class="bx bx-plus"> BIGGER</i></a>
+			<a href="assets/img/further_dev/Search_for.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Search for your pet application - preview"><i class="bx bx-plus"></i></a>
 		</div>
 		</p>
     </div>
@@ -35,27 +34,18 @@
 <div class="col-lg-4 col-md-4 d-flex align-items-stretch">
 	<div>
 	<h3>Funny merchandising - 3d print your pet</h3>
-	<p><a href="index.html#" target="_blank"><strong>3d print your pet</strong></a> is a tool able to help people who lost their pets by loading, sharing, and visualizing <strong>geolocated data</strong> of their missing pets. The user will have the possibility to fill in a form that will structure data similarly to those seen in the Preliminary data section; other users could improve information in case they have seen the lost-pet.</p>
+	<p>The idea is to develop a tool to realize a 3d printed little modelling of our pet, starting from uploading a 360° video. The merchandising unit will be in charge to realize and send home to the users the realized 3d print that will be used as a gift or a little celebrating statue.</p>
 </div>
-<div>    
-	<img src="assets/img/further_dev/" title="3d print your pet">
-		<p>
-		<div class="portfolio-links">
-			<a href="assets/img/further_dev/" data-gallery="portfolioGallery" class="portfolio-lightbox" title="3d print your pet"><i class="bx bx-plus"></i></a>
-		</div>
-		</p>
-    </div>
-	</div>
+</div>
 	
 </div>
 
-     
-	 	 <div class="row">
+<div class="row">
 	
 	<div class="col-lg-4 col-md-4 d-flex align-items-stretch">
 	<div>
 	<h3>Funny merchandising - Panini Trading cards and album</h3>
-	<p>Starting from the strong tradition of the Panini Trading cards and album, already offering personalized products from their <a href="" target="_blank">website and applications</a>, we tought to realize a <strong>Panini Trading cards and album Wanted! edition</strong>. Looking for the missing card among other passionated will improve engagement and experience sharing.</p>
+	<p>Starting from the strong tradition of the Panini Trading cards and album, already offering personalized products from their <a href="https://digitalcollection.mypanini.com/" target="_blank">website and applications</a>, we thought to realize a <strong>Panini Trading cards and album Wanted! edition</strong>. <br>Looking for the missing card among other passionated will improve engagement and experience sharing.</p>
 </div>
 <div>    
 	<img src="assets/img/further_dev/paniniW.jpg" title="Panini album Wanted! edition">
@@ -69,19 +59,19 @@
 </div>  
 				 
 	<div class="col-lg-8 col-md-8 d-flex align-items-stretch">
-	<div>
-	 <h3>Educational merchandising - Memory and Guess Who? board games (and online versions)</h3>
-<p>scientific literature shows that board games and their online versions, are useful tool to improve learning ability and social interaction rate. This is why we would like to propose a Wanted! edition for two traditional board games that have been declined in the years in several versions (Star Wars ed., Disney ed., etc.).
+	<h3>Educational merchandising - Memory and Guess Who? board games (and online versions)</h3>
+	<div><p>Scientific literature shows that board games and their online versions, are useful tool to improve learning ability and social interaction rate. This is why we would like to propose a Wanted! edition for two traditional board games that have been declined in the years in several versions (Star Wars ed., Disney ed., etc.).
 	</p>	
-</div>    
-<div>	<img src="assets/img/further_dev/memory_wanted.png" title="Memory Wanted! edition">
-<img src="assets/img/further_dev/guesswho_wanted.png" title="Guess Who? Wanted! edition">
-	
-		<p>
+	</div>    
+	<div>	
+	<img src="assets/img/further_dev/memory_wanted.png" title="Memory Wanted! edition">
 		<div class="portfolio-links">
 			<a href="assets/img/further_dev/memory_wanted.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Memory Wanted! edition"><i class="bx bx-plus"></i></a>
 		</div>
-		</p>
+	<img src="assets/img/further_dev/guesswho_wanted.png" title="Guess Who? Wanted! edition">
+	<div class="portfolio-links">
+			<a href="assets/img/further_dev/guesswho_wanted.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Guess Who? Wanted! edition"><i class="bx bx-plus"></i></a>
+		</div>
     </div>
 	</div>
 	</div>
