--- a/2_5.html
+++ b/2_5.html
@@ -45,9 +45,7 @@
 	<div class="col-lg-4 col-md-4 d-flex align-items-stretch">
 	<div>
 	<h3>Funny merchandising - Panini Trading cards and album</h3>
-	<p>Starting from the strong tradition of the Panini Trading cards and album, already offering personalized products from their <a href="https://digitalcollection.mypanini.com/" target="_blank">website and applications</a>, we thought to realize a <strong>Panini Trading cards and album Wanted! edition</strong>. <br>Looking for the missing card among other passionated will improve engagement and experience sharing.</p>
-</div>
-<div>    
+	<p>Starting from the strong tradition of the Panini Trading cards and album, already offering personalized products from their <a href="https://digitalcollection.mypanini.com/" target="_blank">website and applications</a>, we thought to realize a <strong>Panini Trading cards and album Wanted! edition</strong>. <br>Looking for the missing card among other passionated will improve engagement and experience sharing.</p>   
 	<img src="assets/img/further_dev/paniniW.jpg" title="Panini album Wanted! edition">
 		<p>
 		<div class="portfolio-links">
@@ -59,10 +57,10 @@
 </div>  
 				 
 	<div class="col-lg-8 col-md-8 d-flex align-items-stretch">
-	<h3>Educational merchandising - Memory and Guess Who? board games (and online versions)</h3>
-	<div><p>Scientific literature shows that board games and their online versions, are useful tool to improve learning ability and social interaction rate. This is why we would like to propose a Wanted! edition for two traditional board games that have been declined in the years in several versions (Star Wars ed., Disney ed., etc.).
-	</p>	
-	</div>    
+	<div class="row">
+	<h3>Educational merchandising - Memory and Guess Who? board games (and online versions)</h3></div>
+	<div class="row"><p>Scientific literature shows that board games and their online versions, are useful tool to improve learning ability and social interaction rate. This is why we would like to propose a Wanted! edition for two traditional board games that have been declined in the years in several versions (Star Wars ed., Disney ed., etc.).
+	</p>    
 	<div>	
 	<img src="assets/img/further_dev/memory_wanted.png" title="Memory Wanted! edition">
 		<div class="portfolio-links">
@@ -73,6 +71,7 @@
 			<a href="assets/img/further_dev/guesswho_wanted.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Guess Who? Wanted! edition"><i class="bx bx-plus"></i></a>
 		</div>
     </div>
+	</div>
 	</div>
 	</div>
 
