--- a/PWDB.html
+++ b/PWDB.html
@@ -160,7 +160,7 @@
 <div class="container col-lg-3 col-md-6">
 
 <nav id="exhibit-pages" class="side">
-    <ul><li class="current"><a href="PWDBnew.html">Introduction</a>
+    <ul><li class="current"><a href="PWDB.html">Introduction</a>
 		<ul><li><a href="#" onclick="change_page('1_1_1.html')">The context</a>
 			<ul><li><a href="#" onclick="change_page('1_1_1.html')">Reference institutions</a></li>
 			<li><a href="#" onclick="change_page('1_1_2.html')">Relevant assets</a></li>
