--- a/1_2_1.html
+++ b/1_2_1.html
@@ -1,10 +1,22 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>1_2_1 PWDB </title>
+    <title>1_2_1 PWDB - Intro - The concept - CH topic case study</title>
   </head>
   <body>
-  
+
+	  <!-- =======  start ======= -->
+            <h2>Introduction</h2>
+		<h3>The Concept</h3>
+			
+            <div class="container">
+	  <h4>Specific CH topic selected as case study</h4>
+		    
+          <h5>Where the idea comes from</h5>
+            </div>
+            <div>
+          <p>A corpus of lost pets advertisements, collected between 2014 and 2020 in different places around the world, was the starting point of our project. Part of this collection is available in the <a href="index.html#preliminary_data">Preliminary data</a> section, which also contains specific pages for three sample flyers (Nobu, Gringo and Luli); in those pages the data, previously spread in the free-text in natural language, have been organized in a table with controlled fields such as the <strong>pet name</strong>, the <strong>type of pet</strong>, and </strong>keywords</strong>.</p>
+</div>
 		  
           <div class="container">
             <h3>PRELIMINARY DATA</h3>
