--- a/1_2_1.html
+++ b/1_2_1.html
@@ -23,7 +23,7 @@
           <iframe src="index.html#preliminary_data" width="100%" height="300vh"></iframe>
           </div>
           
-          <p>The preliminary data have been then used as an observation set through which extracting information to define our <a href="#Personae">Personae</a> because we immediately noticed recursive patterns in the composition - both visual and textual - of these leaflets that could be helpful to extract some information about the producers.</p>
+          <p>The preliminary data have been then used as an observation set through which extracting information to define our <a href="2_1.html" target="_blank">Personae</a> because we immediately noticed recursive patterns in the composition - both visual and textual - of these leaflets that could be helpful to extract some information about the producers.</p>
 
 		<!-- ======= Intro>Concept>CHtopic>Analisys on data start ======= -->
 <div class="title">
@@ -44,7 +44,7 @@
 		  
 		  In addition, Gringo and Polaco are talking in <strong>first person</strong> “Me perdì” (I got lost); other pets are referred with “ella” or “she” <strong>pronouns</strong>; in the flyer for Nobu, "GATTO CERTOSINO (Grigio, pelo lucente)", the cat is defined by the words <strong>"timido" (shy)</strong> and <strong>"tonto" (dumb)</strong>:  all these are clear exemplifications of the humanising of animals, namely the attribution of human's traits, emotions, or intentions to non-human entities.</p>
 
-			<p>The tendency of humanizing domestic animals has a strong tradition, even in the scientific milieu, and some references have been reported in a specific <a href="#">bibliography section</a>. For example, Soviet linguist Yuri Knorozov, known for being the first to decipher the Maya script, is said to have proposed his Siamese cat Asya as co-author of some of his works because the observation of Asya’s behaviour while teaching her kittens to hunt inspired one of his work on signs and communication.. In 1975, Jack Hetherington and F.D.C. Willard published a paper together (Hetherington, J.H., and F.D.C. Willard. <cite>Two-, Three-, and Four-atom Exchange Effects in Bcc He3.</cite> Physical Review Letters 35.21 (1975): 1442-444) but just one of them was a human…</p>
+			<p>The tendency of humanizing domestic animals has a strong tradition, even in the scientific milieu, and some references have been reported in a specific <a href="4.html" target="_blank">bibliography section</a>. For example, Soviet linguist Yuri Knorozov, known for being the first to decipher the Maya script, is said to have proposed his Siamese cat Asya as co-author of some of his works because the observation of Asya’s behaviour while teaching her kittens to hunt inspired one of his work on signs and communication.. In 1975, Jack Hetherington and F.D.C. Willard published a paper together (Hetherington, J.H., and F.D.C. Willard. <cite>Two-, Three-, and Four-atom Exchange Effects in Bcc He3.</cite> Physical Review Letters 35.21 (1975): 1442-444) but just one of them was a human…</p>
 </div>
 <div class="container">
           <h6>ANALYSIS ON SOCIAL MEDIA</h6>
