--- a/1_2_2.html
+++ b/1_2_2.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>1_2_2 PWDB </title>
+    <title>1_2_2 PWDB - Intro - The concept - CognitiveFocus</title>
+	  
   </head>
   <body>
+
+	  <!-- =======  start ======= -->
+            <h2>Introduction</h2>
+		<h3>The Concept</h3>
+			
   <div class="container" id="cognitive">
-        <h3>Chosen cognitive focus among: 1.Attention-Distraction, 2.Language-Narrative, 3. Meaningfulness-Emotions-Empathy, 4. Authenticity perception, 5. Memory-Recall - 2nd step</h3>
+	  <h4>Chosen cognitive focus among:</h4>
+	  <h3>1.Attention-Distraction, 2.Language-Narrative, 3. Meaningfulness-Emotions-Empathy, 4. Authenticity perception, 5. Memory-Recall</h3>
+	<div class="container">  
         <p>We then could count on solid basis to go further with the idea of using the sentimental bond between a pet and its human to create a cultural initiative and a related interactive application based on the cognitive focuses of:</p>
 		<ul>
 		<li>Meaningfulness-Emotions-Empathy</li>
 		<li>Memory-Recall</li>
 		</ul>      
         </div>
+	   </div>
   </body>
   </html>
