--- a/2_5.html
+++ b/2_5.html
@@ -57,11 +57,11 @@
 </div>  
 				 
 	<div class="col-lg-8 col-md-8 d-flex align-items-stretch">
-	<div class="row">
+	<div class="row col-lg-8 col-md-8 d-flex align-items-stretch">
 	<h3>Educational merchandising - Memory and Guess Who? board games (and online versions)</h3></div>
-	<div class="row"><p>Scientific literature shows that board games and their online versions, are useful tool to improve learning ability and social interaction rate. This is why we would like to propose a Wanted! edition for two traditional board games that have been declined in the years in several versions (Star Wars ed., Disney ed., etc.).
-	</p>    
-	<div>	
+	
+	<div class="row col-lg-8 col-md-8 d-flex align-items-stretch"><p>Scientific literature shows that board games and their online versions, are useful tool to improve learning ability and social interaction rate. This is why we would like to propose a Wanted! edition for two traditional board games that have been declined in the years in several versions (Star Wars ed., Disney ed., etc.).</p>    
+	<div class="row col-lg-8 col-md-8 d-flex align-items-stretch">	
 	<img src="assets/img/further_dev/memory_wanted.png" title="Memory Wanted! edition">
 		<div class="portfolio-links">
 			<a href="assets/img/further_dev/memory_wanted.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Memory Wanted! edition"><i class="bx bx-plus"></i></a>
